# ChangeLog for app-misc/cld-meta
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cld-meta-10.0.ebuild,+metadata.xml:
  Meta package for CLD.