@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/cld-meta
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cld-meta-10.3.91.ebuild:
+  Removed kde-base/ktimetracker, kde-base/ktimer, kde-base/okteta
 
   23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
   +cld-meta-10.0.ebuild,+metadata.xml:
